Terraform-k8s-project/k8s/auth-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
        - name: auth-api
          image: bmihalydev/auth-api:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: auth-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
